# hit-song-core

./: .gitignore  README.md  pyproject.toml  requirements.txt
hitsong/: __init__.py  file.py  model.py
hitsongcore/: __init__.py  file.py  model.py  storages.py
